--- a/infra/weaviate-tei/docker-compose.yml
+++ b/infra/weaviate-tei/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     - '8080'
     - --scheme
     - http
-    image: semitechnologies/weaviate
+    image: semitechnologies/weaviate:1.24.5
     ports:
     - 3636:8080
     volumes:
