--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
+		"@types/react": "^18.2.73",
+		"@types/react-dom": "^18.2.23",
 		"chart.js": "^4.4.0",
 		"chartjs-plugin-zoom": "^2.0.1",
 		"marked": "^9.1.2",
 		"md-2-json": "^2.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"weaviate-ts-client": "^1.5.0",
-		"yaml": "^2.3.3"
+		"yaml": "^2.3.3",
+		"zustand": "^4.5.2"
 	}
 }
