--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"md-2-json": "^2.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"tokenizers": "^0.13.3",
 		"weaviate-ts-client": "^1.5.0",
 		"yaml": "^2.3.3",
 		"zustand": "^4.5.2"
